   that are composed of multiple source files, so this did not result in the behavior
   that users expected. In this version, 'core set debug' and 'core set verbose'
   can optionally accept *module* names instead (with or without the .so extension),
   which applies the setting to the entire module specified, regardless of which source
   files it was built from.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for setting the domain in the URI for caller of an
   outbound call by using the SIPFROMDOMAIN channel variable.
 * Added a new configuration option "remotesecret" for authentication to
   remote services. For backwards compatibility, "secret" still has the
   same function as before, but now you can configure both a remote secret and a
   local secret for mutual authentication.
 * If the channel variable  ATTENDED_TRANSFER_COMPLETE_SOUND is set, 
   the sound will be played to the target of an attended transfer
 * Added two new configuration options, "qualifygap" and "qualifypeers", which allow
   finer control over how many peers Asterisk will qualify and the gap between them
   when all peers need to be qualified at the same time.
 * Added a new 'ignoresdpversion' option to sip.conf.  When this is enabled
   (either globally or for a specific peer), chan_sip will treat any SDP data
   it receives as new data and update the media stream accordingly.  By
   default, Asterisk will only modify the media stream if the SDP session
   version received is different from the current SDP session version.  This