@@ -461,6 +461,8 @@ CLI Changes
    can optionally accept *module* names instead (with or without the .so extension),
    which applies the setting to the entire module specified, regardless of which source
    files it was built from.
+ * New 'manager show settings' command showing the current settings loaded from
+   manager.conf. 
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
